--- a/index.html
+++ b/index.html
@@ -1,4 +1,44 @@
 ---
-layout: home
-author_profile: true
+layout: splash
+permalink: /
+title: "Private Therapy Services"
+author_profile: false
+header:
+  overlay_color: "#09C5A3"
+  overlay_image: /images/rachel ashwick home overlay.jpg
+  cta_label: "Book a free consultation <i class='fa fa-phone'></i>"
+  cta_url: "https://rachelashwick.github.io/"
+  caption:  
+excerpt: '<span style="color: #FFFFFF">Friendly private specialist clinical psychologist delivering exceptional mental health care. Creating a therapeutic relationship where you feel comfortable and safe.</span> <br/> <small><a href=" "> </a><br/> {::nomarkdown}<iframe style="display: inline-block;" src=" " frameborder="0" scrolling="0" width="160px" height="30px"></iframe> <iframe style="display: inline-block;" src="" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>{:/nomarkdown}'
+
+feature_row_1:
+  - excerpt: 'Talking about problems and emotions is difficult. We create a therapeutic relationship where you can feel comfortable and safe to discuss anything. We have considerable expertise with a vast array of mental health conditions. Even if previous therapy or treatments haven not helped or you have complex symptoms, we are confident we can help you. If you are still feeling unsure, we can even arrange a short courtesy call with you to work out the best approach for you.'
+
+feature_row:
+  - image_path: images/home page character image 1.png
+    alt: "customizable"
+    title: "Services"
+    excerpt: "Everything from the menus, sidebars, comments, and more can be configured or set with YAML Front Matter."
+    url: "https://rachelashwick.github.io/"
+    btn_label: "Learn More"
+    btn_class: "btn--info"
+  - image_path: images/home page character image 2.png
+    alt: "fully responsive"
+    title: "About us"
+    excerpt: "Built on HTML5 + CSS3. All layouts are fully responsive with helpers to augment your content."
+    url: "https://rachelashwick.github.io/"
+    btn_label: "Learn More"
+    btn_class: "btn--info"
+  - image_path: images/home page character image 3.png
+    alt: "100% free"
+    title: "Contact"
+    excerpt: "Free to use however you want under the MIT License. Clone it, fork it, customize it, whatever!"
+    url: "https://rachelashwick.github.io/"
+    btn_label: "Learn More"
+    btn_class: "btn--info"
+
 ---
+ 
+{% include feature_row id="feature_row_1" type="centre" %}
+
+{% include feature_row id="feature_row" type="left" %}
