--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@ feature_row:
   - image_path: images/home page character image 1.png
     alt: "customizable"
     title: "Services"
-    excerpt: "Everything from the menus, sidebars, comments, and more can be configured or set with YAML Front Matter."
-    url: "https://rachelashwick.github.io/"
+    excerpt: "We offer personalised talking therapies in London or online. Choose from a diverse range of therapy approaches with experienced clinical psychologists and therapists."
+    url: "https://uktherapy.github.io/"
     btn_label: "Learn More"
     btn_class: "btn--info"
   - image_path: images/home page character image 2.png
     alt: "fully responsive"
     title: "About us"
-    excerpt: "Built on HTML5 + CSS3. All layouts are fully responsive with helpers to augment your content."
-    url: "https://rachelashwick.github.io/"
+    excerpt: "We have considerable expertise with a vast array of mental health conditions. Even if previous therapy or treatments haven’t helped or you have complex symptoms, we’re confident we can help you."
+    url: "https://uktherapy.github.io/"
     btn_label: "Learn More"
     btn_class: "btn--info"
   - image_path: images/home page character image 3.png
     alt: "100% free"
     title: "Contact"
-    excerpt: "Free to use however you want under the MIT License. Clone it, fork it, customize it, whatever!"
-    url: "https://rachelashwick.github.io/"
+    excerpt: "We can arrange a brief courtesy call directly you can judge for yourself if you feel comfortable talking to them."
+    url: "https://uktherapy.github.io/"
     btn_label: "Learn More"
     btn_class: "btn--info"
 
