--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   overlay_color: "#09C5A3"
   overlay_image: /images/rachel ashwick home overlay.jpg
   cta_label: "Book a free consultation <i class='fa fa-phone'></i>"
-  cta_url: "https://rachelashwick.github.io/"
+  cta_url: "https://uktherapy.github.io/"
   caption:  
 excerpt: '<span style="color: #FFFFFF">Friendly private specialist clinical psychologist delivering exceptional mental health care. Creating a therapeutic relationship where you feel comfortable and safe.</span> <br/> <small><a href=" "> </a><br/> {::nomarkdown}<iframe style="display: inline-block;" src=" " frameborder="0" scrolling="0" width="160px" height="30px"></iframe> <iframe style="display: inline-block;" src="" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>{:/nomarkdown}'
 
