--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ feature_row:
     btn_class: "btn--info"
   - image_path: images/home page character image 3.png
     alt: "100% free"
-    title: "Contact"
+    title: "Contact us"
     excerpt: "We can arrange a brief courtesy call directly you can judge for yourself if you feel comfortable talking to them."
     url: "https://uktherapy.github.io/"
     btn_label: "Learn More"
