--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ header:
 excerpt: '<span style="color: #FFFFFF">Friendly private specialist clinical psychologist delivering exceptional mental health care. Creating a therapeutic relationship where you feel comfortable and safe.</span> <br/> <small><a href=" "> </a><br/> {::nomarkdown}<iframe style="display: inline-block;" src=" " frameborder="0" scrolling="0" width="160px" height="30px"></iframe> <iframe style="display: inline-block;" src="" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>{:/nomarkdown}'
 
 feature_row_1:
-  - excerpt: '<span style="color: #00000">Talking about problems and emotions is difficult. We create a therapeutic relationship where you can feel comfortable and safe to discuss anything. We have considerable expertise with a vast array of mental health conditions. Even if previous therapy or treatments haven not helped or you have complex symptoms, we are confident we can help you. If you are still feeling unsure, we can even arrange a short courtesy call with you to work out the best approach for you.</span> <br/>'
+  - excerpt: '<span style="color: #00000"> We offers psychological assessment and therapy to adults and young people suffering from a variety of psychological difficulties. Our highly-qualified, friendly team of psychological therapists provide evidence-based therapy in a private, confidential and local practice in London or online. We have considerable expertise with a vast array of mental health difficulties. Contact us confidentially today to work out the best approach for you or to book an appointment.</span> <br/>'
 
 feature_row:
   - image_path: images/home page character image 1.png
